# diesel_json_derive

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
diesel-json-derive-test/: Cargo.toml
diesel-json-derive-test/migrations/2024-05-20-122607_foo/: up.sql
diesel-json-derive-test/src/: main.rs  schema.rs
macro/: Cargo.toml
src/: lib.rs
