[workspace]
resolver = "2"
members = ["diesel-json-derive-test"]

[package]
name = "diesel-json-derive"
version = "0.1.1"
edition = "2021"
homepage = "https://github.com/rksm/diesel-json-derive"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rksm/diesel-json-derive"
description = "Macro crate implementing the proc macro for diesel-json-derive"

[lib]
path = "src/lib.rs"
proc-macro = true

[dependencies]
heck = "0.5.0"
quote = "1"
syn = { version = "2", default-features = false, features = ["parsing", "proc-macro", "derive"] }

[dev-dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
