[package]
name = "diesel-json-derive-test"
version = "0.1.0"
edition = "2021"
description = "A test project for diesel-json-derive-macro"
publish = false

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
diesel-json-derive = { path = "../" }
diesel = { version = "^2.2", features = ["postgres", "serde_json"] }
serde_json = "^1.0"
