[package]
name = "diesel-json-derive-macro"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/rksm/diesel-json-derive"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rksm/diesel-json-derive"
description = "Macro crate implementing the proc macro for diesel-json-derive"

[lib]
proc-macro = true

[dependencies]
# proc-macro2 = "1"
heck = "0.5.0"
quote = "1"
# syn = { version = "1.0", features = ["full", "extra-traits"] }
syn = { version = "2", features = ["full"] }
